add feature get product by category and insert skeleton for handle loading

--- a/index.html
+++ b/index.html
@@ -10,6 +10,42 @@
       sizes="180x180"
     />
     <link rel="mask-icon" href="/mask-icon.svg" color="#FFFFFF" />
+
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589008/imageSlider/bvpxjcfq4yjididkhgio.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589020/imageSlider/mzbice9ggdz5j5swuykd.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589029/imageSlider/yuvynoao0wgaaeohqren.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589044/imageSlider/jd6y14te2hbdoam4of9n.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589056/imageSlider/aut2ll1qbvs59pumhliw.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589068/imageSlider/nch6my1lgxaer4o2jcie.jpg"
+      as="image"
+    />
+    <link
+      rel="preload"
+      href="https://res.cloudinary.com/dhnt2ibpd/image/upload/v1733589079/imageSlider/somav2reeijni2gzawe1.jpg"
+      as="image"
+    />
     <meta name="theme-color" content="#ffffff" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ZHOT</title>
